	Document location of cache file and its automatic update time of 7
	days. Add new option -a|--arch to download package by
	architecture.

	* bin/cygbuild.sh (CygbuildCmdDownloadCygwinPackage): Add option
	-c|--clean to remove cache. Lower cache update time from 30 days
	to 7 days. Add new option -a|--arch to download package by
	architecture.

2015-02-11 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallFixEtcdirInstall):
	Correct for loop which checks preremove postinstall.
	Incorectly added absolute paths to LIST which cause tar
	to use full path names.

2014-06-16 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildMakefileRunTarget): Return 0
	if no makefile.
	(CygbuildCmdBuildStdMakefile): Adjust message.
	(CygbuildInstallFixEtcdirInstall): No action if etc/ is empty

	* bin/lib/cygbuild.pl: (GLOBAL::$systemName): Read NAME
	before DEBFULLNAME.

2014-06-15 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::Patch management commands):
	Document */tmp/* or /*.tmp/* directories in "patch" command.

	* bin/cygbuild.sh: (CygbuildPatchFileList): Disregard
	files in */tmp/* or /*.tmp/* directories
	(CygbuildPatchApplyQuiltMaybe): Improve checking of
	quilt status code.
	(CygbuildCmdInstallList): Warn about unknown variables.

2014-06-14 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallExtraBinFiles): Ignore
	*.tmp files. Do not remote extension. Add support for
	bin/FILE.cyginstdir install instructions for FILE. See
	HELP::OPTIONAL EXTERNAL DIRECTORIES::bin/ for more information.

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL DIRECTORIES):
	Document bin/ and patches/ directories.

2014-06-13 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildObjDumpLibraryDepList): Ignore MPR.dll.
	(CygbuildPreRemoveWrite): chmod 755.

2014-06-12 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES):
	Document delete.lst
